--- a/index.html
+++ b/index.html
@@ -35,3 +35,15 @@
     <h3>Tecnico en Soporte de Infraestructuras Informáticas</h3> Presidencia de la Nación. 2020-2024.
     Cableado estructurado, fibra optica, radioenlaces y soporte tecnico-administrativo.
 
+
+    <p></p>
+
+    <div style="display: flex; justify-content: center; margin-top: 20px;">
+        <a href="MiCV.odt" download>
+            <button>Descargar Word</button>
+        </a>
+        <a href="MiCV.pdf" download>
+            <button>Descargar PDF</button>
+        </a>
+    </div>
+
